# wayfr-catapult

./: .cursorignore  .gitignore  README.md
backend/: .env.example  .gitignore  main.py  modal_app.py  pyproject.toml
backend/api/: ws_handler.py
backend/api/routes/: hazards.py  health.py  homes.py  navigation.py  scan.py  sessions.py  verify.py
backend/core/: config.py  errors.py  logging.py
backend/db/: client.py  schema.sql
backend/db/repositories/: hazards.py  homes.py
backend/ml/: rcac_client.py
backend/models/: hazard.py  home.py  narration.py  session.py  vision.py  worldid.py
backend/pipelines/hloc_localization/: README.md  pose_viewer.py
backend/pipelines/hloc_localization/backend/: app.py  benchmark.py  benchmark_dpvo.py  debug_localize.py  dpvo_app.py  dpvo_server.py  run_batch.py  server.py  visualize_poses.py
backend/pipelines/reconstruction/: README.md  app.py  run_batch.py
backend/pipelines/scene-reconstructor-mvp/: README.md
backend/pipelines/segmentation/: README.md  depth_viewer.py  locate_viewer.py  run_batch.py  seg_viewer.py
backend/pipelines/video-annotator-mvp/: README.md  modal_app.py  modal_app_gsam2.py
backend/services/: hazard_map.py  scene3d.py  session_manager.py  worldid.py
backend/services/home_setup/: bridge.py  modal_clients.py  pipeline.py
backend/services/narration/: context_tracker.py  priority.py  synthesizer.py  tts.py
backend/services/navigation/: instruction_generator.py  pathfinder.py
backend/services/vision/: cloud_vision.py  depth_estimator.py  pipeline.py  scene_analyzer.py
docs/: BACKEND.md  (+11 more)
(+100 files in other folders)
